--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,7 @@
                 <a href="https://www.facebook.com/TrademarkersLLC/" target="_blank"><img class="social_footer" src="/images/v2-assets/social4.svg" alt="facebook"></a>
                 <a href="https://twitter.com/trademarkersllc" target="_blank"><img class="social_footer" src="/images/v2-assets/social2.svg" alt="twitter"></a>
                 <a href="https://www.linkedin.com/company/trademarkers/" target="_blank"><img class="social_footer" src="/images/v2-assets/social3.svg" alt="linkedin"></a>
-                <a href="http://bit.ly/TrademarkersYoutube" target="_blank"><img class="social_footer" src="/images/v2-assets/social1.svg" alt="youtube"></a>
+                <a href="http://bit.ly/TrademarkersYoutube" target="_blank"><img class="social_footer" src="/images/v2-assets/youtube_ico.png" alt="youtube" style="padding: 3px;background: #fff;border-radius: 2px;"></a>
             </div>
 
 
