--- a/public/stylesheets/less/_old_content.less
+++ b/public/stylesheets/less/_old_content.less
@@ -1717,6 +1717,8 @@ ul.rev-arrow-v2 {
                 border : none;
                 background: #008BD4;
                 border-radius: 25px 25px 0px 0px;
+                display: flex;
+                justify-content: space-evenly;
     
                 .nav-link{
                     border : none;
