--- a/views/public/classes.ejs
+++ b/views/public/classes.ejs
@@ -2,14 +2,14 @@
     <div class="row justify-content-center box-bg-container">
         <div class="col-md-12 step-block">
 
-		<form method="POST" action="/class_descriptions">
+		<!-- <form method="POST" action="/class_descriptions">
 
 			<div class="form-group row">
 				<div class="col-md-12">
 					<input type="text" class="form-control search-service" name="desc" required autofocus placeholder="Search your services/goods">
 				</div>
 			</div>
-		</form>
+		</form> -->
 		<table class="table tbl-service">
 			<tbody>
 				<% for (var key in classes) { %>
