--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -37,7 +37,7 @@
                             <img src="/images/countries/ca.png">Canada
                         </a> 
                         <hr> 
-                        <a href="https://trademarkers.com/countries" class="dropdown-item"> All Countries</a> 
+                        <a href="/countries" class="dropdown-item"> All Countries</a> 
                         <a href="https://trademarkers.com/region/AF" class="dropdown-item">Africa</a> 
                         <a href="https://trademarkers.com/region/AS" class="dropdown-item">Asia</a> 
                         <a href="https://trademarkers.com/region/CA" class="dropdown-item">Central America</a> 
