--- a/views/customer/profileEdit.ejs
+++ b/views/customer/profileEdit.ejs
@@ -86,7 +86,7 @@
                                     <input type="text" name="phone" placeholder="Contact Number" class="form-control" pattern="[0-9]*" value="<%= user.phone %>" required="required">
                                   </div>
                                   <div class="col-6">
-                                    <input type="text" name="fax" placeholder="Fax Number" class="form-control" pattern="[0-9]*" value="<%= user.fax %>" required="required">
+                                    <input type="text" name="fax" placeholder="Fax Number" class="form-control" pattern="[0-9]*" value="<%= user.fax %>">
                                   </div>
                                 </div>
                               </div>
