--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -158,7 +158,7 @@
 						<li> <a href="/countries">Trademark <b>Study</b><img src="/images/v2-assets/ui.svg"></a></li>
 						<li> <a href="/countries">Trademark <b>Registration</b><img src="/images/v2-assets/ui.svg"></a></li>
 						<li> <a href="/monitoring-service">Trademark <b>Monitoring</b><img src="/images/v2-assets/ui.svg"></a></li>
-						<li> <a href="/office-service">Office Action <b>Response</b><img src="/images/v2-assets/ui.svg"></a></li>
+						<li> <a href="/quote/office-action-response">Office Action <b>Response</b><img src="/images/v2-assets/ui.svg"></a></li>
 					</ul>
 				</div>
 
